--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 some tools for wynncraft
 WARNING: not all features are guaranteed to follow wynncrafts rules
+
+FEATURES:
+    outer void item helper
