--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-some tools for wynncraft
+1.21.4 fabric mod for wynncraft
 WARNING: not all features are guaranteed to follow wynncrafts rules
 
 FEATURES:
